--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,8 +1,8 @@
 ﻿.header {
     display: grid;
-    grid-template-rows: 70% 30%;
+    grid-template-rows: 65% 35%;
     align-items: center; /* Выравниваем элементы по вертикали */
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Playfair Display', sans-serif;
     height: 150px;
 }
 
@@ -54,13 +54,20 @@
     color: #003366;
 }
 
+.navigation {
+    display: flex;
+    height: 100%;
+}
+
 .navigation a {
-    margin: 0 10px;
-    padding: 10px 12px;
-    font-size: 1.3rem;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
     color: white;
     text-decoration: none;
     transition: background-color 0.3s ease, color 0.3s ease;
+    height: 100%;
 }
 
 .navigation a:hover {
