--- a/src/Styles/RehabilitionPage.css
+++ b/src/Styles/RehabilitionPage.css
@@ -8,16 +8,19 @@
     background-color: white;
 }
 
+
 .rehab-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Адаптивные колонки */
-    gap: 3%; /* Расстояние между карточками */
-    padding: 0 6%;
+    gap: 2%; /* Расстояние между карточками */
+    padding: 0 15%;
     width: 100%;
+    padding-bottom: 4%;
+
 }
 
 .rehab-card {
-    background: white;
+    background: #f7f7f7;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 15px;
@@ -36,49 +39,66 @@
 }
 
 .rehab-card h3 {
-    font-size: 1.5rem;
+    font-size: 1.44rem;
     color: #333;
     margin: 10px 0;
 }
 
 .rehab-card p {
-    font-size: 1rem;
+    font-size: 1.15rem;
     color: gray;
     text-align: left;
     padding: 0 14px;
 }
 
-.price-table {
+.rehab-table {
     width: 100%;
-    max-width: 1200px;
     border-collapse: collapse;
     margin: 20px 0;
+    font-size: 1.05rem;
+    text-align: center;
+
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
-.price-table th, .price-table td {
-    border: 1px solid #ddd;
-    padding: 12px;
+.rehab-table th, .rehab-table td {
+    border: 2px solid #ddd;
+    padding: 10px;
+    vertical-align: top; /* Текст выравнивается по верхнему краю */
+    word-wrap: break-word; /* Перенос длинного текста */
+}
+
+.rehab-table th {
+    background-color: #f9f9f9;
+    font-weight: bold;
+    text-align: center;
+}
+
+.rehab-table td {
     text-align: left;
 }
 
-.price-table th {
-    background-color: #f2f2f2;
-    font-weight: bold;
+.rehab-table tr:nth-child(even) {
+    background-color: #f4f4f4; /* Светлый фон для четных строк */
 }
 
-.price-table tr:nth-child(even) {
-    background-color: #f9f9f9;
+.rehab-table tr:hover {
+    background-color: #e9e9e9; /* Подсветка строки при наведении */
 }
 
-.price-table tr:hover {
-    background-color: #f1f1f1;
+.rehab-table col:nth-child(1),
+.rehab-table col:nth-child(3),
+.rehab-table col:nth-child(4),
+.rehab-table col:nth-child(5) {
+    text-align: center;
 }
-
 .note {
-    font-size: 0.9rem;
+    font-size: 1.44rem;
     color: gray;
     margin-top: 20px;
     text-align: left;
     width: 100%;
     max-width: 1200px;
+    margin-right: 5%;
 }
