--- a/src/Styles/RehabilitionPage.css
+++ b/src/Styles/RehabilitionPage.css
@@ -13,10 +13,14 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Адаптивные колонки */
     gap: 2%; /* Расстояние между карточками */
-    padding: 0 15%;
     width: 100%;
     padding-bottom: 4%;
+}
 
+.rehab-card-padding-container {
+    /*костыль паддинг*/
+    padding-right: 15%;
+    padding-left: 15%;
 }
 
 .rehab-card {
