--- a/src/Styles/Contacts.css
+++ b/src/Styles/Contacts.css
@@ -20,7 +20,7 @@
 }
 
 .right-column {
-    padding-top: 1%;
+    padding-top: 0.5%;
     grid-column: 2;
     grid-row: 1; /* First row */
     text-align: left;
@@ -35,7 +35,8 @@
 .VkLink {
     align-content: start;
     width: 30%;
-    padding-top: 1%;
+    padding-top: 1.5%;
+    padding-bottom: 0.5%;
 }
 
 .CompanyName {
@@ -46,7 +47,7 @@
 .DeveloperName {
     font-size: 1rem;
     margin-left: 35%;
-    margin-top: -5.5%;
+    margin-top: -6.6%;
 }
 
 .DeveloperLink {
