--- a/src/Styles/DoctorsPage.css
+++ b/src/Styles/DoctorsPage.css
@@ -12,13 +12,16 @@
     display: grid;
     text-align: center;
     padding: 20px;
+    padding-right: 7%;
+    padding-left: 7%;
+    padding-bottom: 6%;
 }
 
 /* Grid-контейнер */
 .doctors-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Адаптивные колонки */
-    gap: 2%; /* Расстояние между карточками врачей */
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); /* Адаптивные колонки */
+    gap: 4%; /* Расстояние между карточками врачей */
     padding: 0 10%;
 }
 
@@ -48,8 +51,17 @@
     margin: 10px 0 5px;
 }
 
-.doctor-card p {
+.doctor-card-specialty {
     font-size: 1.5rem;
     color: gray;
     margin: 10px 0 15px;
+}
+
+.doctor-card-description {
+    font-size: 1.32rem;
+    text-align: left;
+    margin-top: -1%;
+    padding-right: 4%;
+    padding-left: 4%;
+    color: #434242;
 }
