--- a/src/Styles/RehabilitionPage.css
+++ b/src/Styles/RehabilitionPage.css
@@ -105,6 +105,10 @@
     background-color: #e9e9e9; /* Подсветка строки при наведении */
 }
 
+.rehab-table tr.highlight {
+    background-color: #ffe6e6; /* Подсветка активной строки */
+}
+
 .rehab-table col:nth-child(1),
 .rehab-table col:nth-child(3),
 .rehab-table col:nth-child(4),
@@ -112,8 +116,17 @@
     text-align: center; /*выбирает определенные столбцы таблицы и центрирует текст в этих столбцах*/
 }
 
-.rehab-table tr.highlight {
-    background-color: #ffe6e6; /* Подсветка активной строки */
+.highlight {
+    animation: highlightFade 3.5s ease-in-out; /* Применяем анимацию на 1.5 секунды */
+}
+
+@keyframes highlightFade {
+    0% {
+        background-color: #003366; /* Начальный цвет подсветки */
+    }
+    100% {
+        background-color: transparent; /* Конечный цвет (прозрачный) */
+    }
 }
 
 .note {
