Шестой мини-апдейт.
Фикс отступа Путевок и Лого

--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -41,6 +41,9 @@
     overflow: hidden;
 }
 
+.logo-image {
+    padding-top: 0.5%;
+}
 .logoContainer img {
     height: 100%;
     object-fit: contain; /* Убедиться, что логотип не растягивается */
